fixed text overflow in questions

--- a/src/main/resources/static/styles/questions.css
+++ b/src/main/resources/static/styles/questions.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 main {
   padding: 4.8rem 16.6rem;
   background-color: #a5d8ff;
@@ -105,35 +109,34 @@ main {
 }
 
 .question__elem {
-  min-height: 15rem;
   width: 100%;
   color: #02261b;
   perspective: 500rem;
+  word-wrap: break-word;
+  min-height: 15rem;
 }
 
 .question__elem-inner {
   width: 100%;
-  height: 100%;
   min-height: 15rem;
-  background-color: #f5fefb;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 2rem;
   transition: all 0.5s;
   transform-style: preserve-3d;
-  position: relative;
+  background-color: #f5fefb;
+  border-radius: 2rem;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .question__elem-inner.is-flipped {
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
 }
 
 .question, .answer {
   padding: 2.4rem 3.2rem;
-  position: absolute;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  min-height: 15rem;
 }
 
 .question {
@@ -161,7 +164,9 @@ main {
 }
 
 .answer {
-  transform: rotateY(180deg);
+  transform: rotateY(-180deg);
+  position: absolute;
+  top: 0;
 }
 
 .answer__title {
